--- a/index.html
+++ b/index.html
@@ -24,212 +24,240 @@
 </center>
 <ol>
   <div class="test_image_and_result col-xs-12">
+    <hr></hr>
       <li class="col-sm-4 col-xs-12">
           <b> Test image - </b>
-          <img src="Headphones.jpg" class="img-responsive" width="250px" height="250px"></img>
+          <img src="Headphones.jpg" class="img-responsive" width="250" height="250"></img>
       </li>
-      <h5 class="col-sm-4 col-xs-12 output_google_lens">
+      <h5 class="col-sm-4 col-xs-12">
           Output on <b>GOOGLE LENS</b> -
-          <span> </span>
+          <span style="font-size: 18px; color:white;">SONY Headphones</span>
       </h5>
-      <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+      <h5 class="col-sm-4 col-xs-12">
           Output on <b>MobileNet Model</b> -
-          <span> </span>
+          <span style="font-size: 18px; color: white;">Headphones</span>
       </h5>
-      <div class="mini_result col-xs-12">
+      <br><br><br>
+      <hr></hr>
+      <div class="mini_result" class="col-xs-12">
           <h4>Result - </h4>
-          <h4> </h4>
-          <hr></hr>
-          <h4>Draw - </h4>
-        </div>>
+          <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
+        </div>
   </div>
-  <br>
+  <br><br><br><br><br>
+
+
   <div class="test_image_and_result col-xs-12">
+    <hr></hr>
     <li class="col-sm-4 col-xs-12">
         <b>Test image - </b>
         <img src="SoftToy.jpg" class="img-responsive" width="250px" height="250px"></img>
     </li>
     <h5 class="col-sm-4 col-xs-12 output_google_lens">
         Output on <b>GOOGLE LENS</b> -
-        <span> </span>
+        <span style="font-size: 18px; color: white;">Imagica Tubby Plush Toy</span>
     </h5>
-    <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+    <h5 class="col-sm-4 col-xs-12">
         Output on <b>MobileNet Model</b> -
-        <span> </span>
+        <span style="font-size: 18px; color: white;">Soft Toy</span>
     </h5>
-    <div class="mini_result col-xs-12">
+    <br><br><br>
+    <hr></hr>
+    <div class="mini_result" class="col-xs-12">
         <h4>Result - </h4>
-          <h4> </h4>
-          <hr></hr>
-          <h4>Draw - </h4>
+          <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
     </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="Dice.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Soft Fabric Dice</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Dice</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="TextBook.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Scholars Hub Young</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Book</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="PencilBox.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Apsara absolute pencils</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Pencils</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="SpectacleCase.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Opthalmic Lenses</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Spectacles</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="SketchPens.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Camel Sketch Pens</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Sketch Pens</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="Cube.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Rubik's Cube 3X3</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Rubik's Cube</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="Comb.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Hair Comb</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Comb</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
-<br>
+<br><br><br><br><br>
+
+
 <div class="test_image_and_result col-xs-12">
+  <hr></hr>
   <li class="col-sm-4 col-xs-12">
       <b>Test image - </b>
       <img src="Perfume.jpg" class="img-responsive" width="250px" height="250px"></img>
   </li>
-  <h5 class="col-sm-4 col-xs-12 output_google_lens">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>GOOGLE LENS</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Park Avenue Storm Deo</span>
   </h5>
-  <h5 class="col-sm-4 col-xs-12 output_mobilenet">
+  <h5 class="col-sm-4 col-xs-12">
       Output on <b>MobileNet Model</b> -
-      <span> </span>
+      <span style="font-size: 18px; color: white;">Perfume</span>
   </h5>
-  <div class="mini_result col-xs-12">
+  <br><br><br>
+  <hr></hr>
+  <div class="mini_result" class="col-xs-12">
     <h4>Result - </h4>
-    <h4> </h4>
-    <hr></hr>
-    <h4>Draw - </h4>
+    <h4 style="font-size: 18px; color: white;">Google Lens is more accurate</h4>
   </div>
 </div>
 </ol>
